Load catalog filters from APIs
